--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,3 @@
-<%if current_user %>
-  <h1>Welcome <%= current_user.name%> </h1>
-<% else %>
+<%if !current_user %>
   <%= link_to "Sign in with Facebook", "auth/facebook" %>
 <% end %>
