add 'sign out' link

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,6 +27,9 @@
           <li class="right">
             <%=link_to "Find my Kyle", ok_kyle_path %>
           </li>
+          <li class="right">
+            <%=link_to "Sign Out", signout_path %>
+          </li>
         </ul>
       </header>
     <% end %>
