Added foundation and carousel for the pictures

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,5 @@
-// @import "*";
-@import "font-awesome-sprockets";
-@import "font-awesome";
-@import "style"
+/*
+ *= require_tree .
+ *= require_self
+ *= require foundation_and_overrides
+ */
