--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,22 +14,24 @@
 
   <body>
     <% if current_user %>
-      <div class="row">
-        <div class="columns small-2 center">
-          <img src=<%=current_user.image %>/>
-        </div>
-        <div class="nav columns small-2 center">
-          <%=current_user.name %>
-        </div>
-        <div class="nav columns small-2 center">
-          <%=link_to "Profile", users_path %>
-        </div>
-        <div class="nav columns small-2 center">
-          <%=link_to "Find my Kyle", ok_kyle_path %>
-        </div>
-        <div class="nav columns small-2 center">
-          <%=link_to "Sign Out", signout_path %>
-        </div>
+      <div class="top-bar">
+        <ul class="dropdown menu" data-dropdown-menu>
+          <li>
+            <img src=<%=current_user.image %>/>
+          </li>
+          <li class="menu-text">
+            <%=current_user.name %>
+          </li>
+          <li class="menu-text">
+            <%=link_to "Profile", users_path %>
+          </li>
+          <li class="menu-text">
+            <%=link_to "Match", ok_kyle_path %>
+          </li>
+          <li class="menu-text">
+            <%=link_to "Log Out", signout_path %>
+          </li>
+        </ul>
       </div>
     <% end %>
     <%= flash[:notice] %>
