added manual user auth for admin dashboard

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,8 @@
   </head>
 
   <body>
-    <% if current_user %>
+    <% unless !current_user %>
+    <% if current_user.admin? %>
       <header>
         <ul class="header">
           <li>
@@ -22,16 +23,32 @@
             <%=current_user.name %>
           </li>
           <li class="right">
-            <%=link_to "Profile", users_path %>
-          </li>
-          <li class="right">
-            <%=link_to "Find my Kyle", ok_kyle_path %>
-          </li>
-          <li class="right">
             <%=link_to "Sign Out", signout_path %>
           </li>
         </ul>
       </header>
+      <% else %>
+        <header>
+          <ul class="header">
+            <li>
+              <img src=<%=current_user.image %>/>
+            </li>
+            <li>
+              <%=current_user.name %>
+            </li>
+            <li class="right">
+              <%=link_to "Profile", users_path %>
+            </li>
+            <li class="right">
+              <%=link_to "Find my Kyle", ok_kyle_path %>
+            </li>
+            <li class="right">
+              <%=link_to "Sign Out", signout_path %>
+            </li>
+          </ul>
+        </header>
+      <% end %>
+
     <% end %>
     <%= flash[:notice] %>
 
