--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,4 @@
 <%if !current_user %>
   <%= link_to "Sign in with Facebook", "auth/facebook" %>
+  <%= link_to "Are you Kyle?", new_session_path %>
 <% end %>
