--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,7 +22,7 @@ body {
 
 
 .flash {
-  background: rgba(330, 130, 75, .85);
+  background: rgba(236, 50, 49, .85);
   color: #F1F1EF;
   text-align: center;
   width: 100%;
@@ -37,23 +37,27 @@ body {
 .picture {
   object-fit: cover;
   height: 75vh;
-  width: 50%;
+  width: 55%;
+  padding: 12px;
   margin: auto;
+  background-color: white;
   display: inline-block;
+  border-radius: 1%;
+  box-shadow: 2px 2px 2px #9C9B98;
 
   @media (max-width: 450px){
-    width: 80%;
+    width: 75%;
   }
 }
 
 .clickable {
   display: inline-block;
-  width: 25%;
+  width: 20%;
   height: 75vh;
   position: relative;
 
   @media (max-width: 450px){
-    width: 10%;
+    width: 8%;
   }
 }
 
@@ -72,6 +76,12 @@ header li {
   padding-right: 2%;
 }
 
-.vertical-center {
-  @include centerer
+.swipe-icon {
+  @include centerer;
+  font-size: 5em;
+  color: #EC3231;
+
+  @media (max-width: 450px){
+    font-size: 2em;
+  }
 }
