--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -8,11 +8,22 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:700');
 @import url('https://fonts.googleapis.com/css?family=Raleway:700');
 
+$kyle-red: #EC3231;
+
 @mixin centerer {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+@mixin picture {
+  object-fit: cover;
+  padding: 12px;
+  background-color: white;
+  display: inline-block;
+  border-radius: 1%;
+  box-shadow: 0px 0px 8px #9C9B98;
 }
 
 body {
@@ -34,16 +45,11 @@ body {
   height: 4.25vh
 }
 
-.picture {
-  object-fit: cover;
+.swipe-picture {
+  @include picture;
   height: 75vh;
   width: 55%;
-  padding: 12px;
   margin: auto;
-  background-color: white;
-  display: inline-block;
-  border-radius: 1%;
-  box-shadow: 0px 0px 8px #9C9B98;
 
   @media (max-width: 450px){
     width: 75%;
@@ -79,9 +85,39 @@ header li {
 .swipe-icon {
   @include centerer;
   font-size: 5em;
-  color: #EC3231;
+  color: $kyle-red;
 
   @media (max-width: 450px){
     font-size: 2em;
+  }
+}
+
+.match-picture {
+  @include picture;
+  height: 55vh;
+  width: 65%;
+  margin: auto;
+
+  @media (max-width: 450px){
+    width: 75%;
+  }
+}
+
+.unmatch-button {
+  border: none;
+  background-color: $kyle-red;
+  padding: 1%;
+  font-family: Montserrat;
+  color: #F1F1EF;
+}
+
+.match-div {
+  float: left;
+  width: 50%;
+  text-align: center;
+  padding-bottom: 3%;
+
+  @media (max-width: 450px){
+    width: 100%;
   }
 }
