--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -29,6 +29,7 @@ $kyle-red: #EC3231;
 body {
   background-color: #F1F1EF;
   font-family: 'Raleway';
+  margin: 0;
 }
 
 
@@ -119,5 +120,26 @@ header li {
 
   @media (max-width: 450px){
     width: 100%;
+  }
+}
+
+.landing-background {
+  background: rgba(236, 50, 49, .75);
+  width: 100%;
+  height: 100vh;
+}
+
+.login-box {
+  @include centerer;
+  height: 50%;
+  width: 50%;
+  background-color: #F1F1EF;
+  border-radius: 1%;
+}
+
+.facebook-button {
+  img {
+    width: 50%;
+    margin: 0
   }
 }
