--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,4 +1,6 @@
 .landing-background
+  .kyle-logo
+    = image_tag("https://res.cloudinary.com/duor0bzmo/image/upload/v1485900226/148590052969034_od3hir.png")
   .login-box
     - if !current_user
       .facebook-button
