--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,6 +32,9 @@
             <li>
               <%=link_to "Find my Kyle", ok_kyle_path %>
             </li>
+            <li>
+              <%= link_to "Chat", chatrooms_path %>
+            </li>
           <% end %>
           <li>
             <%=link_to "Sign Out", signout_path %>
