Made the message submission React-based and fixed API to make the endpoint a show method

--- a/app/views/chatrooms/show.html.erb
+++ b/app/views/chatrooms/show.html.erb
@@ -1,6 +1,4 @@
-<%= render partial: 'messages/message_form', locals: {message: @message, chatroom: @chatroom}%>
-
 <% if current_user %>
-  <div id="match-chat">
+  <div id="match-chat" data-chatroom=<%= params[:id]%>>
   </div>
 <% end %>
