--- a/app/views/chatrooms/index.html.erb
+++ b/app/views/chatrooms/index.html.erb
@@ -2,11 +2,9 @@
   <% @chatrooms.each do |chatroom| %>
     <p><%= link_to "#{chatroom.user.name}", chatroom_path(chatroom.id) %></p>
   <% end %>
-<% else %>
-  <%= render partial: 'messages/message_form', locals: {message: @message, chatroom: @chatroom}%>
 <% end %>
 
 <% if current_user %>
-  <div id="match-chat">
+  <div id="match-chat" data-chatroom=<%= @chatroom.id %>>
   </div>
 <% end %>
