--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -34,6 +34,13 @@ $kyle-red: #EC3231;
   color: #F1F1EF;
 }
 
+@mixin message {
+  padding: 1%;
+  margin: 1%;
+  border-radius: 6%;
+  box-shadow: 0px 0px 8px #9C9B98;
+}
+
 body {
   background-color: #F1F1EF;
   font-family: 'Raleway';
@@ -195,4 +202,14 @@ header li {
 
 .chat-header {
   text-align: center;
+}
+
+.sender-message {
+  @include message;
+  background-color: $kyle-red;
+}
+
+.reply-message {
+  @include message;
+  background-color: grey;
 }
