--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,17 +19,16 @@
       <header>
         <img class="header-logo" src="https://res.cloudinary.com/duor0bzmo/image/upload/v1486937306/ok_kyle_logo_red_qqautl.png"/>
         <div class="dropdown">
-          <%=link_to image_tag( current_user.image), users_path %>
+          <img src= <%=current_user.image %> />
 
           <div class="dropdown-content">
 
+            <%=link_to "My Matches", users_path %>
+
+            <%=link_to "Find my Kyle", ok_kyle_path unless current_user.admin? %>
+
             <%=link_to "Sign Out", signout_path %>
 
-            <% unless current_user.admin? %>
-
-              <%=link_to "Find my Kyle", ok_kyle_path %>
-
-            <% end %>
           </div>
         </div>
       </header>
