--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -234,3 +234,52 @@ a:visited {
 .chat-header {
   text-align: center;
 }
+
+.kyle-log-in-header {
+  color: $kyle-red;
+}
+
+.kyle-log-in {
+  background-color: white;
+  padding: 5%;
+  margin: 10% auto;
+  max-width: 50%;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+
+  .kyle-log-in-header {
+    margin-top: 0;
+    text-align: center;
+    font-size: 3em;
+  }
+
+  .kyle-log-in-button {
+    @include button;
+    font-size: 1em;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  }
+
+  .kyle-log-in-button:hover{
+    background-color: #F1F1EF;
+    color: $kyle-red;
+  }
+
+  .kyle-log-in-form {
+    text-align: center;
+
+    input {
+      width: 100%;
+      height: 2em;
+      margin-bottom: 5%;
+      font-size: 1em;
+      text-align: center;
+    }
+
+    a {
+      color: $kyle-red;
+    }
+
+    a:hover {
+      color: black;
+    }
+  }
+}
