--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,6 +9,7 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway:700');
 
 $kyle-red: #EC3231;
+$message-grey: #808080;
 
 @mixin centerer {
   position: absolute;
@@ -35,11 +36,13 @@ $kyle-red: #EC3231;
 }
 
 @mixin message {
-  padding: .5%;
-  margin: 1%;
-  border-radius: 3%;
-  box-shadow: 0px 0px 8px #9C9B98;
+  padding: 2.5% 5%;
+  margin: 2%;
+  border-radius: 20px;
+  width: fit-content;
   max-width: 200px;
+  display: block;
+  font-size: .9rem;
 }
 
 body {
@@ -97,7 +100,7 @@ a:visited {
   position: relative;
   display: inline-block;
   float: right;
-  
+
   .prof-pic {
     max-width: 50px;
   }
@@ -240,6 +243,10 @@ a:visited {
 .chatbox {
   height: 400px;
   overflow-y: scroll;
+  margin-left: 25%;
+  width: 50%;
+  background-color: #FAFAFA;
+  // box-shadow: 0px 0px 8px #9C9B98;
 }
 
 .chat-header {
@@ -249,9 +256,37 @@ a:visited {
 .sender-message {
   @include message;
   background-color: $kyle-red;
+  float: right;
 }
 
 .reply-message {
   @include message;
-  background-color: grey;
+  background-color: $message-grey;
+}
+
+.message-div {
+  width: 100%;
+  float: left;
+  clear: left;
+}
+
+.chat-button{
+  @include button;
+  width: 10%;
+  margin-right: 25%;
+  padding: 2% 0;
+  font-size: 1rem;
+}
+
+.chat-input{
+  margin-left: 25%;
+  width: 40%;
+  border: none;
+  font-size: 1rem;
+  padding: 2% 0;
+  background-color: #FAFAFA;
+}
+
+.chat-input:focus {
+  outline: none;
 }
