Fixed missing bracket in CSS

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -295,7 +295,7 @@ a:visited {
   padding: 2% 0;
   background-color: #FAFAFA;
   border: solid .25px #E3E3E3;
-  
+
   @media(min-width: 450px){
     margin-left: 25%;
     width: 39.5%;
@@ -345,5 +345,4 @@ a:visited {
       text-align: center;
     }
   }
-
-
+}
