--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,6 +9,7 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway:700');
 
 $kyle-red: #EC3231;
+$background-white: #F1F1EF;
 
 @mixin centerer {
   position: absolute;
@@ -31,19 +32,18 @@ $kyle-red: #EC3231;
   background-color: $kyle-red;
   padding: 1%;
   font-family: Montserrat;
-  color: #F1F1EF;
+  color: $background-white;
 }
 
 body {
-  background-color: #F1F1EF;
+  background-color: $background-white;
   font-family: 'Raleway';
-  margin: 0;
 }
 
 
 .flash {
   background: rgba(236, 50, 49, .85);
-  color: #F1F1EF;
+  color: $background-white;
   text-align: center;
   width: 100%;
   font-family: 'Montserrat', serif;
@@ -157,66 +157,56 @@ a:visited {
   }
 }
 
-.landing-background {
-  background: rgba(236, 50, 49, .75);
-  width: 100%;
-  height: 100vh;
+.landing-container {
+  padding: 5% 0;
+  background-color: white;
+  margin: 40% auto;
+  max-width: 90%;
+  display: block;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+
+  @media (min-width: 450px) {
+    max-width: 50%;
+    margin: 15% auto;
+  }
+
+  @media (min-width: 1500px) {
+    margin: 5% auto;
+  }
+
+  .kyle-logo {
+    display: block;
+    width: 90%;
+    margin: 0 auto;
+  }
 }
 
 .login-box {
-  @include centerer;
-  height: 30%;
-  width: 45%;
-  border-radius: 1%;
   text-align: center;
 
-  a {
-    position: relative;
-    margin-bottom: 25%;
+  .facebook-button {
+    display:block;
+    width: 50%;
+    text-align: center;
+    margin: 0 auto 1%;
   }
 
-  @media (max-width: 450px){
-    width: 80%;
-    height: 40%;
+  .kyle-link {
+    text-align: center;
+    color: $kyle-red;
   }
-}
 
-.facebook-button {
-  @include centerer;
-  img {
-    width: 100%;
-  }
-}
-
-.kyle-logo {
-  width: 100%;
-
-  img {
-    width: 100%;
-    padding-left: 0;
-
-    @media (min-width: 450px){
-      width: 50%;
-      padding-left: 25%;
-    }
-
-    @media (min-width: 800px){
-      margin-top: 3%;
-      width: 40%;
-      padding-left: 30%;
-    }
+  .kyle-link:hover {
+    color: black;
   }
 }
+
 
 .header-logo {
   max-width: 300px;
   display: inline;
   position: relative;
   float: left;
-}
-
-.kyle-link {
-  // padding-top: 40%;
 }
 
 .superlike-button {
@@ -238,18 +228,22 @@ a:visited {
   text-align: center;
 }
 
-.kyle-log-in-header {
-  color: $kyle-red;
-}
-
 .kyle-log-in {
+  display: block;
   background-color: white;
   padding: 5%;
   margin: 10% auto;
-  max-width: 50%;
+  width: 70%;
+  max-width: 70%;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 
+  @media(max-width: 450px) {
+    max-width: 70%;
+    margin: 10% auto;
+  }
+
   .kyle-log-in-header {
+    color: $kyle-red;
     margin-top: 0;
     text-align: center;
     font-size: 3em;
@@ -262,7 +256,7 @@ a:visited {
   }
 
   .kyle-log-in-button:hover{
-    background-color: #F1F1EF;
+    background-color: $background-white;
     color: $kyle-red;
   }
 
