Organized SASS into page specific sheets and imported to application (got rid of require tree)

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,359 +1,16 @@
-/*
- *= require_tree .
- *= require_self
- */
-
 @import "font-awesome-sprockets";
 @import "font-awesome";
 @import url('https://fonts.googleapis.com/css?family=Montserrat:700');
 @import url('https://fonts.googleapis.com/css?family=Raleway:700');
+@import "swipe";
+@import "header";
+@import "profiles";
+@import "splash_page";
+@import "chat";
+@import "kyle_splash";
 
-$kyle-red: #EC3231;
-$background-white: #F1F1EF;
-$message-grey: #808080;
-
-@mixin centerer {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-@mixin picture {
-  object-fit: cover;
-  padding: 12px;
-  background-color: white;
-  display: inline-block;
-  border-radius: 1%;
-  box-shadow: 0px 0px 8px #9C9B98;
-}
-
-@mixin button {
-  border: none;
-  background-color: $kyle-red;
-  padding: 1%;
-  font-family: Montserrat;
-  color: $background-white;
-}
-
-@mixin message {
-  padding: 2.5% 5%;
-  margin: 2%;
-  border-radius: 20px;
-  width: fit-content;
-  max-width: 200px;
-  display: block;
-  font-size: .9rem;
-}
 
 body {
   background-color: $background-white;
   font-family: 'Raleway';
-}
-
-
-.flash {
-  background: rgba(236, 50, 49, .85);
-  color: $background-white;
-  text-align: center;
-  width: 100%;
-  font-family: 'Montserrat', serif;
-  height: 4.25vh;
-}
-
-.placeholder {
-  height: 4.25vh
-}
-
-.swipe-picture {
-  @include picture;
-  height: 70vh;
-  width: 55%;
-  margin: auto;
-
-  @media (max-width: 450px){
-    width: 75%;
-  }
-}
-
-.clickable {
-  display: inline-block;
-  width: 20%;
-  height: 70vh;
-  position: relative;
-
-  @media (max-width: 450px){
-    width: 8%;
-  }
-}
-
-a {
-  text-decoration: none;
-}
-
-a:visited {
-  color: inherit;
-}
-
-.dropdown {
-  margin: 4% 3%;
-  position: relative;
-  display: inline-block;
-  float: right;
-
-  .prof-pic {
-    max-width: 50px;
-  }
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  z-index: 1;
-  min-width: 125px;
-  background-color: white;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-
-  a {
-    display: block;
-    text-align: right;
-    padding: 7px 5px;
-    color: $kyle-red;
-  }
-
-  a:hover {
-    background-color: $kyle-red;
-    color: white;
-  }
-}
-
-.dropdown:hover .dropdown-content {
-  display: inline-block;
-  right: -1%;
-}
-
-.swipe-icon {
-  @include centerer;
-  font-size: 5em;
-  color: $kyle-red;
-
-  @media (max-width: 450px){
-    font-size: 2em;
-  }
-}
-
-.match-picture {
-  @include picture;
-  height: 55vh;
-  width: 65%;
-  margin: auto;
-
-  @media (max-width: 450px){
-    width: 75%;
-  }
-}
-
-.unmatch-button {
-  @include button;
-}
-
-.match-div {
-  float: left;
-  width: 50%;
-  text-align: center;
-  padding-bottom: 3%;
-
-  @media (max-width: 450px){
-    width: 100%;
-  }
-}
-
-.landing-container {
-  padding: 5% 0;
-  background-color: white;
-  margin: 40% auto;
-  max-width: 90%;
-  display: block;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-
-  @media (min-width: 450px) {
-    max-width: 50%;
-    margin: 15% auto;
-  }
-
-  @media (min-width: 1500px) {
-    margin: 5% auto;
-  }
-
-  .kyle-logo {
-    display: block;
-    width: 90%;
-    margin: 0 auto;
-  }
-}
-
-.login-box {
-  text-align: center;
-
-  .facebook-button {
-    display:block;
-    width: 50%;
-    text-align: center;
-    margin: 0 auto 1%;
-  }
-
-  .kyle-link {
-    text-align: center;
-    color: $kyle-red;
-  }
-
-  .kyle-link:hover {
-    color: black;
-  }
-}
-
-
-.header-logo {
-  max-width: 300px;
-  display: inline;
-  position: relative;
-  float: left;
-}
-
-.superlike-button {
-  @include button;
-  margin: 1% auto;
-  display: block;
-}
-
-.clear{
-  clear: both;
-}
-
-.chatbox {
-  width: 90%;
-  margin-left: 5%;
-  height: 400px;
-  overflow-y: scroll;
-  background-color: #FAFAFA;
-
-  @media(min-width: 450px){
-    margin-left: 25%;
-    width: 50%;
-  }
-}
-
-.chat-header {
-  text-align: center;
-}
-
-.sender-message {
-  @include message;
-  background-color: $kyle-red;
-  float: right;
-}
-
-.reply-message {
-  @include message;
-  background-color: $message-grey;
-}
-
-.message-div {
-  width: 100%;
-  float: left;
-  clear: left;
-}
-
-.chat-button{
-  @include button;
-  width: 30%;
-  margin-right: 5%;
-  padding: 2% 0;
-  font-size: 1rem;
-
-  @media(min-width: 450px){
-    width: 10%;
-    margin-right: 25%;
-  }
-}
-
-.chat-button:hover {
-  background-color: #FAFAFA;
-  color: $kyle-red;
-}
-
-.chat-input{
-  margin-left: 5%;
-  width: 59%;
-  border: none;
-  font-size: 1rem;
-  padding: 2% 0;
-  background-color: #FAFAFA;
-  border: solid .25px #E3E3E3;
-
-  @media(min-width: 450px){
-    margin-left: 25%;
-    width: 39.5%;
-  }
-}
-
-.chat-input:focus {
-  outline: none;
-}
-
-.kyle-log-in-header {
-  color: $kyle-red;
-}
-
-.kyle-log-in {
-  display: block;
-  background-color: white;
-  padding: 5%;
-  margin: 10% auto;
-  width: 70%;
-  max-width: 70%;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-
-  @media(max-width: 450px) {
-    max-width: 70%;
-    margin: 10% auto;
-  }
-
-  .kyle-log-in-header {
-    color: $kyle-red;
-    margin-top: 0;
-    text-align: center;
-    font-size: 3em;
-  }
-
-  .kyle-log-in-button {
-    @include button;
-    font-size: 1em;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  }
-
-  .kyle-log-in-button:hover{
-    background-color: $background-white;
-    color: $kyle-red;
-  }
-
-  .kyle-log-in-form {
-    text-align: center;
-
-    input {
-      width: 100%;
-      height: 2em;
-      margin-bottom: 5%;
-      font-size: 1em;
-      text-align: center;
-    }
-
-    a {
-      color: $kyle-red;
-    }
-
-    a:hover {
-      color: black;
-    }
-  }
 }
