Kyle match page styling complete!

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -8,6 +8,7 @@
 @import "splash_page";
 @import "chat";
 @import "kyle_splash";
+@import "kyle_dashboard";
 
 body {
   background-color: $background-white;
